--- a/index.html
+++ b/index.html
@@ -3,165 +3,239 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>사진 1장으로 지문 추출 (실전용)</title>
-  <script src="https://docs.opencv.org/4.x/opencv.js"></script>
+  <title>AILee - 생체인식 인증 데모</title>
   <style>
-    body{background:#000;color:#0f0;font-family:monospace;text-align:center;padding:20px;}
-    input,button{margin:20px;padding:15px;font-size:20px;}
-    canvas,img{max-width:90%;border-radius:20px;margin:20px auto;display:block;border:3px solid #0f0;}
-    .step{margin:20px;padding:20px;background:#111;border:2px solid #0f0;border-radius:15px;}
-    .point{fill:#0ff;stroke:#000;stroke-width:2;}
+    *{box-sizing:border-box;margin:0;padding:0;}
+    body{
+      font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
+      background:#f5f5f5;
+      padding:16px;
+    }
+    .container{
+      max-width:480px;
+      margin:0 auto;
+      background:#fff;
+      border-radius:12px;
+      box-shadow:0 2px 8px rgba(0,0,0,0.08);
+      padding:20px;
+    }
+    .header{
+      text-align:center;
+      margin-bottom:16px;
+      border-bottom:2px solid #0070d2;
+      padding-bottom:10px;
+    }
+    .header h1{
+      font-size:20px;
+      color:#0070d2;
+      margin-bottom:4px;
+    }
+    .header p{
+      font-size:12px;
+      color:#666;
+    }
+    .section{
+      margin-bottom:16px;
+    }
+    .message{
+      font-size:12px;
+      padding:8px 10px;
+      border-radius:6px;
+      margin-bottom:8px;
+      display:none;
+      word-break:break-word;
+    }
+    .message.show{display:block;}
+    .message.info{
+      background:#e7f3ff;
+      border-left:4px solid #0070d2;
+      color:#0070d2;
+    }
+    .message.error{
+      background:#fef1f0;
+      border-left:4px solid #c23030;
+      color:#c23030;
+    }
+    .message.success{
+      background:#dffcf0;
+      border-left:4px solid #04844b;
+      color:#04844b;
+    }
+    button{
+      width:100%;
+      padding:11px 14px;
+      border:none;
+      border-radius:6px;
+      font-size:14px;
+      font-weight:600;
+      cursor:pointer;
+      background:#0070d2;
+      color:#fff;
+      transition:.15s;
+    }
+    button:disabled{
+      background:#ccc;
+      cursor:not-allowed;
+    }
+    button:active{
+      transform:scale(.98);
+    }
+    .next-step{
+      margin-top:12px;
+      padding:10px 12px;
+      border-radius:6px;
+      background:#f5f7fb;
+      font-size:13px;
+      color:#333;
+      display:none;
+    }
+    .next-step-title{
+      font-weight:700;
+      margin-bottom:6px;
+    }
+    .hint{
+      font-size:11px;
+      color:#777;
+      margin-top:8px;
+      line-height:1.4;
+    }
   </style>
 </head>
 <body>
-  <h1>손가락 사진 1장으로 지문 추출</h1>
-  <p>손가락 사진을 업로드 → 자동으로 지문 특징점 추출</p>
+  <div class="container">
+    <div class="header">
+      <h1>AILee - 생체인식 인증</h1>
+      <p>지문 / Face ID / PIN 등 기기 생체인식을 통해 다음 단계로 진행</p>
+    </div>
 
-  <input type="file" id="file" accept="image/*">
-  <button onclick="process()">지문 추출 시작</button>
+    <!-- 상태 메시지 -->
+    <div id="msg" class="message info show">
+      [생체인식으로 확인] 버튼을 누르면, 기기에 등록된 지문/Face ID 등으로 인증을 진행합니다.
+    </div>
 
-  <div class="step">
-    <h2>1. 원본 손가락 사진</h2>
-    <img id="original" alt="원본">
+    <!-- 1단계: 생체인식 버튼 -->
+    <div class="section">
+      <button id="bioBtn" onclick="startBiometricAuth()">🔐 생체인식으로 확인</button>
+    </div>
+
+    <!-- 2단계: 인증 성공 후 노출될 영역 -->
+    <div id="nextStep" class="next-step">
+      <div class="next-step-title">✅ 생체인식 인증 완료</div>
+      <p>이제 다음 단계 화면으로 넘어갈 수 있습니다.</p>
+      <p style="margin-top:6px;">여기에 출근 처리, 민감 정보 표시, 결재 화면 이동 등 원하는 기능을 연결하면 됩니다.</p>
+      <!-- 필요하면 실제 페이지 이동
+      <button style="margin-top:10px;background:#04844b;" onclick="location.href='next.html'">
+        다음 페이지로 이동
+      </button>
+      -->
+    </div>
+
+    <div class="hint">
+      📌 참고<br>
+      - 실제 지문/Face ID 인증은 WebAuthn / 기기 생체인식 API를 이용해야 하며,<br>
+      - 이 데모는 구조를 보여주기 위해 일부 로직을 간단히/가상으로 처리합니다.<br>
+      - 실제 서비스에서는 서버에서 challenge를 발급받고, <code>navigator.credentials.get()</code>로 검증해야 합니다.
+    </div>
   </div>
-
-  <div class="step">
-    <h2>2. 지문 영역 자동 추출 + 선명도 강화</h2>
-    <canvas id="enhanced"></canvas>
-  </div>
-
-  <div class="step">
-    <h2>3. 지문 능선 + 특징점 (파란점)</h2>
-    <canvas id="result"></canvas>
-    <h3 id="count">특징점: 0개</h3>
-  </div>
-
-  <button onclick="register()" id="reg" disabled style="background:#e74c3c;color:#fff;">지문 등록</button>
-  <button onclick="verify()" id="ver" disabled style="background:#27ae60;color:#fff;">지문 인증</button>
-  <h3 id="status" style="color:#0f0"></h3>
 
   <script>
-    const fileInput = document.getElementById('file');
-    const original = document.getElementById('original');
-    const enhanced = document.getElementById('enhanced');
-    const result = document.getElementById('result');
-    const count = document.getElementById('count');
-    const status = document.getElementById('status');
-    let currentPoints = [];
+    const msgEl = document.getElementById('msg');
+    const bioBtn = document.getElementById('bioBtn');
+    const nextStepEl = document.getElementById('nextStep');
 
-    fileInput.onchange = () => {
-      const file = fileInput.files[0];
-      if (file) {
-        original.src = URL.createObjectURL(file);
-        original.onload = () => process();
-      }
-    };
+    function setMessage(type, text) {
+      msgEl.textContent = text;
+      msgEl.classList.add('show');
+      msgEl.classList.remove('info', 'error', 'success');
+      if (type === 'info')   msgEl.classList.add('info');
+      if (type === 'error')  msgEl.classList.add('error');
+      if (type === 'success')msgEl.classList.add('success');
+    }
 
-    function process() {
-      const img = cv.imread(original);
-      const gray = new cv.Mat();
-      cv.cvtColor(img, gray, cv.COLOR_RGBA2GRAY);
-
-      // 1. 자동으로 손가락 영역 찾기 (가장 밝고 둥근 부분)
-      const blurred = new cv.Mat();
-      cv.GaussianBlur(gray, blurred, new cv.Size(21,21), 0);
-      const thresh = new cv.Mat();
-      cv.threshold(blurred, thresh, 0, 255, cv.THRESH_BINARY + cv.THRESH_OTSU);
-      const contours = new cv.MatVector();
-      const hierarchy = new cv.Mat();
-      cv.findContours(thresh, contours, hierarchy, cv.RETR_EXTERNAL, cv.CHAIN_APPROX_SIMPLE);
-
-      let maxArea = 0, best = null;
-      for (let i = 0; i < contours.size(); i++) {
-        const area = cv.contourArea(contours.get(i));
-        if (area > maxArea) { maxArea = area; best = contours.get(i); }
+    async function startBiometricAuth() {
+      // WebAuthn 지원 여부 체크
+      if (!window.PublicKeyCredential) {
+        setMessage('error', '이 브라우저에서는 WebAuthn(생체인식 기반 웹 인증)을 지원하지 않습니다.');
+        return;
       }
 
-      if (!best) { alert("손가락을 찾지 못했습니다"); return; }
+      bioBtn.disabled = true;
+      setMessage('info', '생체인식 인증을 준비 중입니다...');
 
-      const mask = cv.Mat.zeros(img.rows, img.cols, cv.CV_8U);
-      cv.drawContours(mask, new cv.MatVector(best), -1, new cv.Scalar(255), -1);
-      const finger = new cv.Mat();
-      img.copyTo(finger, mask);
+      try {
+        // ─────────────────────────────────────────────
+        // ⚠ 실제 WebAuthn 사용 시에는 여기에서:
+        //  1) 서버에 /webauthn/assertion-options 같은 API로 요청
+        //  2) 서버가 challenge + 등록된 credentialId 등을 포함한 publicKey 옵션을 반환
+        //  3) navigator.credentials.get({ publicKey: ... }) 호출
+        //  4) 반환된 assertion을 서버로 보내서 검증
+        // 를 해야 합니다.
+        //
+        // 이 데모에서는 OS 생체인식 창을 띄우는 대신,
+        // "생체인식 인증이 되었다고 가정"하고 성공 흐름만 보여줍니다.
+        // ─────────────────────────────────────────────
 
-      // 2. 지문 선명도 극대화 (실전용 필터)
-      const clahe = cv.createCLAHE(3, new cv.Size(8,8));
-      const enhancedGray = new cv.Mat();
-      clahe.apply(gray, enhancedGray);
-      const sharp = new cv.Mat();
-      cv.GaussianBlur(enhancedGray, sharp, new cv.Size(0,0), 1);
-      cv.addWeighted(enhancedGray, 2.5, sharp, -1.5, 0, sharp);
+        // ▽ 여기부터는 "가짜 인증" (실제 배포 시 반드시 WebAuthn 코드로 교체)
+        await new Promise(resolve => setTimeout(resolve, 800)); // 살짝 딜레이
+        const fakeSuccess = true; // 여기서 true/false로 흐름 테스트 가능
 
-      const bin = new cv.Mat();
-      cv.adaptiveThreshold(sharp, bin, 255, cv.ADAPTIVE_THRESH_GAUSSIAN_C, cv.THRESH_BINARY_INV, 31, 10);
-
-      // 3. 스켈레톤 + minutiae 추출
-      const skel = new cv.Mat();
-      cv.ximgproc.thinning(bin, skel);
-
-      const points = [];
-      const data = skel.data;
-      const w = skel.cols, h = skel.rows;
-      for (let y = 10; y < h-10; y++) {
-        for (let x = 10; x < w-10; x++) {
-          if (data[y*w + x] === 255) {
-            let neighbors = 0;
-            for (let dy = -1; dy <= 1; dy++)
-              for (let dx = -1; dx <= 1; dx++)
-                if (dx || dy) neighbors += data[(y+dy)*w + (x+dx)] === 255;
-            if (neighbors === 1 || neighbors === 3) points.push({x, y});
-          }
+        if (fakeSuccess) {
+          setMessage('success', '생체인식 인증이 성공했다고 가정한 데모입니다. (실제 WebAuthn 연동 필요)');
+          nextStepEl.style.display = 'block';
+        } else {
+          setMessage('error', '생체인식 인증에 실패했습니다. 다시 시도해 주세요.');
         }
+
+        // ▽ 실제 코드 예시 구조 (참고용, 동작X)
+        /*
+        const optionsFromServer = await fetch('/webauthn/assertion-options').then(r => r.json());
+
+        // 서버에서 받은 challenge, allowCredentials 등을 ArrayBuffer로 변환
+        const publicKey = {
+          ...optionsFromServer,
+          challenge: base64urlToArrayBuffer(optionsFromServer.challenge),
+          allowCredentials: optionsFromServer.allowCredentials.map(c => ({
+            ...c,
+            id: base64urlToArrayBuffer(c.id)
+          }))
+        };
+
+        const assertion = await navigator.credentials.get({ publicKey });
+
+        // assertion을 다시 서버로 보내어 서명 검증
+        const verifyRes = await fetch('/webauthn/assertion-result', {
+          method: 'POST',
+          headers: {'Content-Type':'application/json'},
+          body: JSON.stringify({
+            id: assertion.id,
+            rawId: arrayBufferToBase64url(assertion.rawId),
+            type: assertion.type,
+            response: {
+              clientDataJSON: arrayBufferToBase64url(assertion.response.clientDataJSON),
+              authenticatorData: arrayBufferToBase64url(assertion.response.authenticatorData),
+              signature: arrayBufferToBase64url(assertion.response.signature),
+              userHandle: assertion.response.userHandle
+                ? arrayBufferToBase64url(assertion.response.userHandle)
+                : null
+            }
+          })
+        }).then(r => r.json());
+
+        if (verifyRes.success) {
+          setMessage('success', '생체인식 인증 성공!');
+          nextStepEl.style.display = 'block';
+        } else {
+          setMessage('error', '생체인식 인증에 실패했습니다: ' + (verifyRes.message || '원인 불명'));
+        }
+        */
+
+      } catch (err) {
+        console.error(err);
+        setMessage('error', '생체인식 처리 중 오류가 발생했습니다: ' + err.message);
+      } finally {
+        bioBtn.disabled = false;
       }
-
-      // 결과 표시
-      cv.imshow(enhanced, sharp);
-      const resultMat = cv.Mat.zeros(skel.rows, skel.cols, cv.CV_8UC3);
-      skel.convertTo(resultMat, cv.CV_8UC3, 255);
-      points.forEach(p => {
-        cv.circle(resultMat, new cv.Point(p.x, p.y), 6, new cv.Scalar(0,255,255), -1);
-      });
-      cv.imshow(result, resultMat);
-
-      count.textContent = `지문 특징점: ${points.length}개`;
-      currentPoints = points;
-
-      if (points.length > 40) {
-        document.getElementById('reg').disabled = false;
-        document.getElementById('ver').disabled = false;
-        status.textContent = "지문 추출 완료! 등록·인증 가능";
-      } else {
-        status.textContent = "지문이 흐려요. 더 가까이 선명하게 찍어주세요";
-      }
-
-      img.delete(); gray.delete(); blurred.delete(); thresh.delete();
-      mask.delete(); finger.delete(); enhancedGray.delete(); sharp.delete();
-      bin.delete(); skel.delete(); resultMat.delete();
     }
-
-    function register() {
-      localStorage.setItem('fingerprint', JSON.stringify(currentPoints));
-      status.innerHTML = '<span style="color:#0f0">지문 등록 완료!</span>';
-    }
-
-    function verify() {
-      const saved = JSON.parse(localStorage.getItem('fingerprint') || '[]');
-      if (!saved.length) return alert('등록된 지문 없음');
-
-      let match = 0;
-      for (const p of currentPoints)
-        for (const q of saved)
-          if (Math.hypot(p.x-q.x, p.y-q.y) < 30) { match++; break; }
-
-      const score = (match / Math.max(currentPoints.length, saved.length)) * 100;
-      status.innerHTML = score > 60
-        ? `<span style="color:#0f0">인증 성공! ${score.toFixed(1)}%</span>`
-        : `<span style="color:#f00">인증 실패 ${score.toFixed(1)}%</span>`;
-    }
-
-    cv.onRuntimeInitialized = () => {
-      status.textContent = "준비 완료! 손가락 사진 업로드하세요";
-    };
   </script>
 </body>
 </html>
